--- a/src/assets/styles/_input.scss
+++ b/src/assets/styles/_input.scss
@@ -62,6 +62,10 @@
       padding: 8px 12px;
     }
   }
+
+  .button.is-danger {
+    background: $color-danger;
+  }
   
   // DROPDOWN BUTTONS
   .bp-dropdown__btn {
